--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,3 +68,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/MetalGearSolid.MSGItemPickup",NewName="/Script/MetalGearSolid.MGSItemPickup")
++ClassRedirects=(OldName="/Script/MetalGearSolid.MSGWeaponItem",NewName="/Script/MetalGearSolid.MGSWeaponItem")
